# cellular-automaton

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  cam_test.cxx  cmake_cython.cfg.in  cpp_example.cxx  domain.hxx  matlab_example.m  particle.hxx  setup.sh  test_mex.m  visualizeBinaryMatrix.m
.github/workflows/: clang_format.yml  cmake.yml  make_doxygen.yml
cpp_examples/: cpp_example.cxx
cython/: cellular_automaton.pxd  cellular_automaton.pyx
examples_cpp/: cpp_example.cxx
examples_python/: AR_parameter.py  cam.py
import/CAM/: compile_prep.py  config.py  include.py  names.py  paths.py
include/CAM/: aggregate.hxx  building_units.hxx  cam_interface.hxx  cellular_automaton.hxx  cellular_automaton_new.hxx  composite.hxx  domain.hxx  domain_new.hxx  evaluation.hxx  print.hxx  utils.hxx
matlab_examples/: matlab_example.m
matlab_functions/: print.m  print_update.m
mex/CAM/: cellular_automaton.cxx  compile_and_run.m.in  run_cam.cxx.in  run_cam.m  run_cam.m.in
python_examples/: cam.py  distribution_estimator.py  mcmc.py  mcmc_2parameter.py  mcmc_2parameter_2D3D_tests.py  mcmc_2parameter_particles.py  mcmc_particles.py  multiple_objectives.py  parameter.py  parameter_long.py  parameter_mcmc.py  parameter_mcmc_v2.py  parameter_sll.py  particles2D.py  particles3D.py
python_examples/parameter_estimator/: ecdf_test.py  parameter.py
python_examples/parameters/: ecdf_test.py  mcmc_test.py
python_functions/: evaluate_mcmc.py  evaluate_mcmc_time_steps.py  parameter_identification.py  parameter_identification_mcmc_particles.py  parameter_identification_mcmc_plot.py  parameter_identification_particles.py  parameter_identification_syn_ll.py  plot.py
